--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,20 @@ SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 if(HARMATTAN)
     set(BUILD_DESKTOP_GUI false)
     set(BUILD_HARMATTAN true)
+    set(BUILD_UBUNTUTOUCH false)
     set(WITHOUT_TESTS true)
     message(STATUS "Building version for MeeGo Harmattan")
+elseif(UBUNTUTOUCH)
+    set(BUILD_DESKTOP_GUI false)
+    set(BUILD_HARMATTAN false)
+    set(BUILD_UBUNTUTOUCH true)
+    set(WITHOUT_TESTS true)
+    set(WITH_QT5 true)
+    message(STATUS "Building version for Ubuntu Touch")
 else()
     set(BUILD_DESKTOP_GUI true)
     set(BUILD_HARMATTAN false)
+    set(BUILD_UBUNTUTOUCH false)
     message(STATUS "Building the desktop version")
 endif()
 
@@ -23,13 +32,20 @@ if(WITH_QT5)
     find_package(Qt5Gui REQUIRED)
     find_package(Qt5Network REQUIRED)
     find_package(Qt5Sql REQUIRED)
-    find_package(Qt5WebKitWidgets REQUIRED)
-    find_package(Qt5Widgets REQUIRED)
     find_package(Qt5LinguistTools REQUIRED)
     if(NOT WITHOUT_TESTS)
         find_package(Qt5Test REQUIRED)
     endif()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+    if(BUILD_UBUNTUTOUCH)
+        find_package(Qt5Quick REQUIRED)
+        find_package(Qt5Qml REQUIRED)
+        find_package(Qt5Core REQUIRED)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Quick_EXECUTABLE_COMPILE_FLAGS}")
+    else()
+        find_package(Qt5WebKitWidgets REQUIRED)
+        find_package(Qt5Widgets REQUIRED)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
+    endif()
     find_package(Qt5LinguistForTrojita)
 else()
     message(STATUS "Building the Qt4 version")
@@ -532,6 +548,18 @@ set(trojitaHarmattan_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Harmattan/qmlapplicationviewer/qmlapplicationviewer.cpp
 )
 
+set(trojitaUbuntuTouch_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/UbuntuTouch/main.cpp
+)
+
+set(libUbuntuTouch_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/UbuntuTouch/webviewnet.cpp
+)
+
+set(libUbuntuTouch_HEADERS
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/UbuntuTouch/webviewnet.h
+)
+
 if(Linguist_FOUND)
     file(GLOB_RECURSE lang_PO "${CMAKE_CURRENT_SOURCE_DIR}/po/trojita_common_*.po")
     if(WITH_QT5)
@@ -649,6 +677,14 @@ elseif(BUILD_HARMATTAN)
     endif()
     target_link_libraries(trojita-tp QmlModelGlue AppVersion Imap MSA Streams qwwsmtpclient Common Composer MimetypesQt4
         ${QT_QTSQL_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${QT_QTWEBKIT_LIBRARY} ${QT_QTDECLARATIVE_LIBRARY})
+elseif(BUILD_UBUNTUTOUCH)
+    add_library(QmlModelGlue ${libQmlModelGlue_SOURCES})
+    add_library(UbuntuTouch ${libUbuntuTouch_SOURCES})
+    add_executable(trojita-tp ${trojitaUbuntuTouch_SOURCES})
+    target_link_libraries(trojita-tp UbuntuTouch QmlModelGlue Imap Streams Common)
+    qt5_use_modules(QmlModelGlue Core Network)
+    qt5_use_modules(UbuntuTouch Network Core Gui Qml Quick)
+    qt5_use_modules(trojita-tp Core Gui Qml Quick)
 endif()
 
 if(WITH_QT5)
@@ -659,11 +695,14 @@ if(WITH_QT5)
     qt5_use_modules(MSA Network)
     qt5_use_modules(Composer Gui Network)
     qt5_use_modules(Imap Gui Network Sql)
-    qt5_use_modules(DesktopGui Network WebKitWidgets)
-    qt5_use_modules(AbookAddressbook Widgets)
-    qt5_use_modules(be.contacts Widgets)
-    qt5_use_modules(trojita Widgets)
+    if(BUILD_DESKTOP_GUI)
+        qt5_use_modules(DesktopGui Network WebKitWidgets)
+        qt5_use_modules(AbookAddressbook Widgets)
+        qt5_use_modules(be.contacts Widgets)
+        qt5_use_modules(trojita Widgets)
+    endif()
 endif()
+
 
 if(BUILD_DESKTOP_GUI)
     install(TARGETS trojita be.contacts RUNTIME DESTINATION bin)
