--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -685,11 +685,11 @@ elseif(BUILD_UBUNTUTOUCH)
     qt5_add_resources(trojitaUbuntuTouch_RESOURCES_OUT ${trojitaUbuntuTouch_RESOURCES})
     add_library(QmlModelGlue ${libQmlModelGlue_SOURCES})
     add_library(UbuntuTouch ${libUbuntuTouch_SOURCES})
-    add_executable(trojita-tp ${trojitaUbuntuTouch_SOURCES} ${trojitaUbuntuTouch_RESOURCES_OUT})
-    target_link_libraries(trojita-tp UbuntuTouch QmlModelGlue Imap Streams Common)
+    add_executable(email-app ${trojitaUbuntuTouch_SOURCES} ${trojitaUbuntuTouch_RESOURCES_OUT})
+    target_link_libraries(email-app UbuntuTouch QmlModelGlue Imap Streams Common)
     qt5_use_modules(QmlModelGlue Core Network)
     qt5_use_modules(UbuntuTouch Network Core Gui Qml Quick)
-    qt5_use_modules(trojita-tp Core Gui Qml Quick)
+    qt5_use_modules(email-app Core Gui Qml Quick)
 endif()
 
 if(WITH_QT5)
@@ -722,6 +722,11 @@ elseif(BUILD_HARMATTAN)
     install(DIRECTORY ${trojita_harmattan_path}/qml DESTINATION opt/trojita-tp/)
     install(FILES ${trojita_harmattan_path}/trojita-tp.desktop DESTINATION usr/share/applications/)
     install(FILES ${trojita_harmattan_path}/trojita-tp80.png DESTINATION usr/share/icons/hicolor/80x80/apps/)
+elseif(BUILD_UBUNTUTOUCH)
+    install(TARGETS email-app RUNTIME DESTINATION bin)
+    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/UbuntuTouch/email-app.desktop DESTINATION share/applications/)
+    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/icons/trojita.png DESTINATION share/icons/hicolor/32x32/apps/)
+    install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/icons/trojita.svg DESTINATION share/icons/hicolor/scalable/apps/)
 endif()
 
 
